load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")

##########################################################
# NOTEBOOKS
##########################################################

drake_jupyter_py_binary(
    name = "test_simplify_poly",
    add_test_rule = 0,
#    data = [
 #       "//test_simplify_poly",
 #   ],
    deps = [
        "//bindings/pydrake",
    ],
)
